--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/raviolisgithub/GG-Bot/issues"
   },
-  "homepage": "https://github.com/raviolisgithub/GG-Bot#readme"
+  "homepage": "https://github.com/raviolisgithub/GG-Bot#readme",
+  "dependencies": {
+    "discord.js": "^14.5.0"
+  }
 }
